k8s/foo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo-service
  namespace: default
  labels:
    app: foo
spec:
  selector:
    app: foo
  ports:
  - name: http
    port: 80
    targetPort: 5678
    protocol: TCP
  type: ClusterIP
