k8s/bar-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: bar-virtualservice
  namespace: default
spec:
  hosts:
  - "bar.localhost"
  gateways:
  - http-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: bar-service
        port:
          number: 80
