k8s/foo-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: foo-virtualservice
  namespace: default
spec:
  hosts:
  - "foo.localhost"
  gateways:
  - http-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: foo-service
        port:
          number: 80
